# basic-game-engine

./: CMakeLists.txt
Source/: Game.cpp  Game.h  main.cpp
Source/Drawables/: Drawable.cpp  Drawable.h  Entities.cpp  Entities.h
Source/States/: StateBase.h  StateGame.cpp  StateGame.h
